--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo y Cultura Bogotá</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -173,7 +173,7 @@
     </nav>
     </footer>
 
-    <script src="js/codigojs.js"></script>
+    <script src="codigojs.js"></script>
 
 </body>
 </html>
